--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode/settings.json
 data/EGM2008full.csv
-Gravity/__pycache__/gravity.cpython-313.pyc
-Integration_and_Conversion/__pycache__/state.cpython-313.pyc
-Gravity/__pycache__/gravity.cpython-312.pyc
-Integration_and_Conversion/__pycache__/state.cpython-312.pyc
+Gravity/__pycache__/
+Integration_and_Conversion/__pycache__
+Gravity/__pycache__
+Integration_and_Conversion/__pycache__
