Fixed typo in Gravity Acceleration code, laid footwork for density calculation from NRLMSIS

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Gravity/__pycache__/
 Integration_and_Conversion/__pycache__
 Gravity/__pycache__
 Integration_and_Conversion/__pycache__
+Gravity/gravitynjit.py
