Tore through acceleration_g, added dependency for pyshtools. Acceleration is much faster and much more accurate

--- a/environment.yml
+++ b/environment.yml
@@ -9,10 +9,9 @@ dependencies:
   - tqdm
   - scipy
   - pathlib
-  - fortran-compiler
   - numba
   - seaborn
   - astropy
-  - numba-scipy
+  - pyshtools
 pip:
   - pyatmos
