--- a/environment.yml
+++ b/environment.yml
@@ -3,18 +3,178 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - matplotlib
-  - numpy
-  - numexpr
-  - tqdm
-  - scipy
-  - pathlib
-  - numba
-  - astropy
-  - skyfield
-  - pyshtools
-  - pip
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=5.1
+  - aom=3.6.0
+  - astropy=7.1.0
+  - astropy-iers-data=0.2025.10.20.0.39.8
+  - blas=2.138
+  - blas-devel=3.9.0
+  - bottleneck=1.4.2
+  - brotlicffi=1.0.9.2
+  - bzip2=1.0.8
+  - ca-certificates=2025.10.5
+  - cairo=1.18.4
+  - certifi=2025.10.5
+  - cffi=2.0.0
+  - charset-normalizer=3.4.4
+  - contourpy=1.3.1
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.28
+  - dav1d=1.2.1
+  - ducc0=0.39.1
+  - expat=2.7.1
+  - fftw=3.3.10
+  - fontconfig=2.15.0
+  - fonttools=4.60.1
+  - freetype=2.13.3
+  - fribidi=1.0.10
+  - graphite2=1.3.14
+  - harfbuzz=10.2.0
+  - icu=73.1
+  - idna=3.7
+  - jpeg=9f
+  - jplephem=2.23
+  - kiwisolver=1.4.8
+  - lcms2=2.16
+  - ld_impl_linux-64=2.44
+  - lerc=4.0.0
+  - libavif=1.1.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcups=2.4.2
+  - libdeflate=1.22
+  - libdrm=2.4.124
+  - libegl=1.7.0
+  - libevent=2.1.12
+  - libffi=3.4.4
+  - libgcc=15.2.0
+  - libgcc-ng=15.2.0
+  - libgfortran=15.2.0
+  - libgfortran-ng=15.2.0
+  - libgfortran5=15.2.0
+  - libgl=1.7.0
+  - libglib=2.84.4
+  - libglvnd=1.7.0
+  - libglx=1.7.0
+  - libgomp=15.2.0
+  - libiconv=1.16
+  - libkrb5=1.21.3
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libllvm15=15.0.7
+  - libllvm20=20.1.8
+  - libmpdec=4.0.0
+  - libopenblas=0.3.30
+  - libopengl=1.7.0
+  - libopenjpeg=2.5.4
+  - libpciaccess=0.18
+  - libpng=1.6.50
+  - libpq=17.6
+  - libsodium=1.0.20
+  - libstdcxx=15.2.0
+  - libstdcxx-ng=15.2.0
+  - libtiff=4.7.0
+  - libuuid=1.41.5
+  - libwebp-base=1.3.2
+  - libxcb=1.17.0
+  - libxkbcommon=1.9.1
+  - libxml2=2.13.9
+  - libzlib=1.3.1
+  - llvmlite=0.45.1
+  - lmdb=0.9.31
+  - lz4-c=1.9.4
+  - matplotlib=3.10.6
+  - matplotlib-base=3.10.6
+  - mesalib=25.1.5
+  - mysql-common=9.3.0
+  - mysql-libs=9.3.0
+  - ncurses=6.5
+  - nomkl=3.0
+  - numba=0.62.1
+  - numexpr=2.11.0
+  - numpy=2.3.3
+  - numpy-base=2.3.3
+  - openblas=0.3.30
+  - openblas-devel=0.3.30
+  - openjpeg=2.5.4
+  - openldap=2.6.10
+  - openssl=3.5.4
+  - packaging=25.0
+  - pandas=2.3.3
+  - pathlib=1.0.1
+  - pcre2=10.46
+  - pillow=11.3.0
+  - pip=25.2
+  - pixman=0.46.4
+  - platformdirs=4.3.7
+  - pooch=1.8.2
+  - pthread-stubs=0.3
+  - pycparser=2.23
+  - pyerfa=2.0.1.5
+  - pyinstrument=5.1.1
+  - pyparsing=3.2.0
+  - pyqt=6.9.1
+  - pyqt6-sip=13.10.2
+  - pyshtools=4.13.1
+  - pysocks=1.7.1
+  - python=3.13.9
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2025.2
+  - python_abi=3.13
+  - pytz=2025.2
+  - pyyaml=6.0.2
+  - qtbase=6.9.2
+  - qtdeclarative=6.9.2
+  - qtsvg=6.9.2
+  - qttools=6.9.2
+  - qtwayland=6.9.2
+  - qtwebchannel=6.9.2
+  - qtwebsockets=6.9.2
+  - readline=8.3
+  - requests=2.32.5
+  - scipy=1.16.2
+  - setuptools=80.9.0
+  - sgp4=2.25
+  - sip=6.12.0
+  - six=1.17.0
+  - skyfield=1.53
+  - spirv-tools=2025.1
+  - sqlite=3.50.2
+  - tbb=2022.0.0
+  - tk=8.6.15
+  - tornado=6.5.1
+  - tqdm=4.67.1
+  - tzdata=2025b
+  - urllib3=2.5.0
+  - wayland=1.24.0
+  - wheel=0.45.1
+  - xarray=2025.10.1
+  - xcb-util=0.4.1
+  - xcb-util-cursor=0.1.5
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.1
+  - xcb-util-renderutil=0.3.10
+  - xcb-util-wm=0.4.2
+  - xkeyboard-config=2.44
+  - xorg-libice=1.1.2
+  - xorg-libsm=1.2.6
+  - xorg-libx11=1.8.12
+  - xorg-libxau=1.0.12
+  - xorg-libxdmcp=1.1.5
+  - xorg-libxext=1.3.6
+  - xorg-libxfixes=6.0.1
+  - xorg-libxrandr=1.5.4
+  - xorg-libxrender=0.9.12
+  - xorg-libxshmfence=1.3.3
+  - xorg-libxxf86vm=1.1.6
+  - xorg-xorgproto=2024.1
+  - xz=5.6.4
+  - yaml=0.2.5
+  - zlib=1.3.1
+  - zstd=1.5.7
   - pip:
-     - pyatmos
+      - pyatmos==1.2.7
+      - pymsis==0.11.0
+      - wget==3.2
 
-  - pymsis
